--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,7 +41,7 @@
 		.form-signin .form-control:focus {
 			z-index: 2;
 		}
-		.form-signin input[type="email"] {
+		.form-signin input[type="text"] {
 			margin-bottom: -1px;
 			border-bottom-right-radius: 0;
 			border-bottom-left-radius: 0;
@@ -88,10 +88,11 @@
 		<img class="mb-4" src="{{ asset("/icon/person-fill.svg") }}" alt="Not found" width="72" height="72">
 
 		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-		<label for="inputEmail" class="sr-only">Email address</label>
-		<input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
+		<label for="inputUsername" class="sr-only">Username</label>
+		<input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
+
 		<label for="inputPassword" class="sr-only">Password</label>
-		<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+		<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
 		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
