--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,80 +38,80 @@
 				</nav>
 			</div>
 
-			{% block body %}{% endblock %}
+			<div class="d-flex justify-content-center"> {% block body %}{% endblock %}
+				</div>
 
-			<div class="container">
+				<div class="container">
+					<footer class="pt-4 my-md-5 pt-md-5 border-top">
+						<div class="row">
+							<div class="col-6 col-md">
+								<img class="mb-2" src="{{ asset("/icon/dice-4-fill.svg") }}" alt="Not found" width="24" height="24">
 
-				<footer class="pt-4 my-md-5 pt-md-5 border-top">
-					<div class="row">
-						<div class="col-12 col-md">
-							<img class="mb-2" src="{{ asset("/icon/dice-4-fill.svg") }}" alt="Not found" width="24" height="24">
+								<small class="d-block mb-3 text-muted">&copy; 2017-2021</small>
+							</div>
+							<div class="col-6 col-md">
+								<h5>Features</h5>
+								<ul class="list-unstyled text-small">
+									<li>
+										<a class="text-muted" href="#">Cool stuff</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Random feature</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Team feature</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Stuff for developers</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Another one</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Last time</a>
+									</li>
+								</ul>
+							</div>
+							<div class="col-6 col-md">
+								<h5>Resources</h5>
+								<ul class="list-unstyled text-small">
+									<li>
+										<a class="text-muted" href="#">Resource</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Resource name</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Another resource</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Final resource</a>
+									</li>
+								</ul>
+							</div>
+							<div class="col-6 col-md">
+								<h5>About</h5>
+								<ul class="list-unstyled text-small">
+									<li>
+										<a class="text-muted" href="#">Team</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Locations</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Privacy</a>
+									</li>
+									<li>
+										<a class="text-muted" href="#">Terms</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</footer>
+				</div>
 
-							<small class="d-block mb-3 text-muted">&copy; 2017-2021</small>
-						</div>
-						<div class="col-6 col-md">
-							<h5>Features</h5>
-							<ul class="list-unstyled text-small">
-								<li>
-									<a class="text-muted" href="#">Cool stuff</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Random feature</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Team feature</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Stuff for developers</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Another one</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Last time</a>
-								</li>
-							</ul>
-						</div>
-						<div class="col-6 col-md">
-							<h5>Resources</h5>
-							<ul class="list-unstyled text-small">
-								<li>
-									<a class="text-muted" href="#">Resource</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Resource name</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Another resource</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Final resource</a>
-								</li>
-							</ul>
-						</div>
-						<div class="col-6 col-md">
-							<h5>About</h5>
-							<ul class="list-unstyled text-small">
-								<li>
-									<a class="text-muted" href="#">Team</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Locations</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Privacy</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Terms</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</footer>
-			</div>
-
-			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-		</body>
-	</html>
+				<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+				<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+			</body>
+		</html>
