--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -63,6 +63,8 @@
 		{{ form_errors(registrationForm.plainPassword) }}
 	</div>
 
+	{{ form_rest(registrationForm) }}
+
 	<button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
 
 	{{ form_end(registrationForm) }}
