--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,9 +32,20 @@
 				<h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
 
 				<nav class="my-2 my-md-0 mr-md-3">
-					<a class="p-2 text-dark" href="{{ path('') }}">Home</a>
-					<a class="btn btn-outline-primary" href="{{ path('app_login') }}">Sign in</a>
-					<a class="btn btn-outline-dark" href="{{ path('app_register') }}">Sign up</a>
+					{% if app.request.pathinfo != '/' %}
+						<a class="p-2 text-dark" href="{{ path('') }}">Home</a>
+					{% endif %}
+
+					{% if (app.user == false) and (app.request.pathinfo != '/login') %}
+						<a class="btn btn-outline-primary" href="{{ path('app_login') }}">Sign in</a>
+					{% endif %}
+					{% if (app.user == false) and (app.request.pathinfo != '/register') %}
+						<a class="btn btn-outline-dark" href="{{ path('app_register') }}">Sign up</a>
+					{% endif %}
+
+					{% if app.user %}
+						<a class="btn btn-outline-dark" href="{{ path('app_logout') }}">Logout</a>
+					{% endif %}
 				</nav>
 			</div>
 
@@ -115,3 +126,5 @@
 				<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 			</body>
 		</html>
+	</body>
+</html></body></html></body></html>
