--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -13,18 +13,39 @@
 		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
 	{% endfor %}
 
-	{{ form_start(registrationForm, {
+	{% if app.user %}
+		<div class="container my-5">
+			<div class="row justify-content-center">
+				<img class="mb-4" src="{{ asset("/icon/person-fill.svg") }}" alt="Not found" width="72" height="72">
+			</div>
+
+			<div class="row justify-content-center">
+				<h1 class="h3 mb-3 font-weight-normal">You are logged in as
+					{{ app.user.username }}
+				</h1>
+			</div>
+
+			<div class="row justify-content-center">
+				<h1>
+					<a href="{{ path('app_logout') }}">Logout</a>
+				</h1>
+			</div>
+		</div>
+	{% endif %}
+
+	{% if app.user == false %}
+		{{ form_start(registrationForm, {
         'attr': {
             'class': 'form-signin'
             }
         }
     ) }}
 
-	<img class="mb-4" src="{{ asset("/icon/person-fill.svg") }}" alt="Not found" width="72" height="72">
+		<img class="mb-4" src="{{ asset("/icon/person-fill.svg") }}" alt="Not found" width="72" height="72">
 
-	<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+		<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
 
-	{{ form_widget(registrationForm.username, {
+		{{ form_widget(registrationForm.username, {
         'attr': {
             'type': 'text',
             'name': 'username',
@@ -33,13 +54,13 @@
         }
     }) }}
 
-	<small>{{ form_help(registrationForm.username) }}</small>
+		<small>{{ form_help(registrationForm.username) }}</small>
 
-	<div class="form-error">
-		{{ form_errors(registrationForm.username) }}
-	</div>
+		<div class="form-error">
+			{{ form_errors(registrationForm.username) }}
+		</div>
 
-	{{ form_widget(registrationForm.plainPassword.first, {
+		{{ form_widget(registrationForm.plainPassword.first, {
         'attr': {
             'type': 'password',
             'name': 'password',
@@ -48,7 +69,7 @@
         }
     }) }}
 
-	{{ form_widget(registrationForm.plainPassword.second, {
+		{{ form_widget(registrationForm.plainPassword.second, {
         'attr': {
             'type': 'password',
             'name': 'password',
@@ -57,15 +78,17 @@
         }
     }) }}
 
-	<small>{{ form_help(registrationForm.plainPassword) }}</small>
+		<small>{{ form_help(registrationForm.plainPassword) }}</small>
 
-	<div class="form-error">
-		{{ form_errors(registrationForm.plainPassword) }}
-	</div>
+		<div class="form-error">
+			{{ form_errors(registrationForm.plainPassword) }}
+		</div>
 
-	{{ form_rest(registrationForm) }}
+		{{ form_rest(registrationForm) }}
 
-	<button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
 
-	{{ form_end(registrationForm) }}
+		{{ form_end(registrationForm) }}
+	{% endif %}
+
 {% endblock %}
