--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -14,7 +14,7 @@
 	{% endfor %}
 
 	{% if app.user %}
-		<div class="container my-5">
+		<div class="container">
 			<div class="row justify-content-center">
 				<img class="mb-4" src="{{ asset("/icon/person-fill.svg") }}" alt="Not found" width="72" height="72">
 			</div>
@@ -24,35 +24,28 @@
 					{{ app.user.username }}
 				</h1>
 			</div>
-
-			<div class="row justify-content-center">
-				<h1>
-					<a href="{{ path('app_logout') }}">Logout</a>
-				</h1>
-			</div>
 		</div>
 	{% endif %}
 
 	{% if app.user == false %}
 		{{ form_start(registrationForm, {
-        'attr': {
-            'class': 'form-signin'
-            }
-        }
-    ) }}
+			'attr': {
+				'class': 'form-signin'
+			}
+		} ) }}
 
 		<img class="mb-4" src="{{ asset("/icon/person-fill.svg") }}" alt="Not found" width="72" height="72">
 
 		<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
 
 		{{ form_widget(registrationForm.username, {
-        'attr': {
-            'type': 'text',
-            'name': 'username',
-            'class': 'form-control',
-            'placeholder': 'Username'
-        }
-    }) }}
+			'attr': {
+				'type': 'text',
+				'name': 'username',
+				'class': 'form-control',
+				'placeholder': 'Username'
+			}
+		}) }}
 
 		<small>{{ form_help(registrationForm.username) }}</small>
 
@@ -61,22 +54,22 @@
 		</div>
 
 		{{ form_widget(registrationForm.plainPassword.first, {
-        'attr': {
-            'type': 'password',
-            'name': 'password',
-            'class': 'form-control',
-            'placeholder': 'Password'
-        }
-    }) }}
+			'attr': {
+				'type': 'password',
+				'name': 'password',
+				'class': 'form-control',
+				'placeholder': 'Password'
+			}
+		}) }}
 
 		{{ form_widget(registrationForm.plainPassword.second, {
-        'attr': {
-            'type': 'password',
-            'name': 'password',
-            'class': 'form-control',
-            'placeholder': 'Repeat Password'
-        }
-    }) }}
+			'attr': {
+				'type': 'password',
+				'name': 'password',
+				'class': 'form-control',
+				'placeholder': 'Repeat Password'
+			}
+		}) }}
 
 		<small>{{ form_help(registrationForm.plainPassword) }}</small>
 
