--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -14,7 +14,7 @@
 	{% endfor %}
 
 	{% if app.user %}
-		<div class="container">
+		<div id="already_logged" class="container">
 			<div class="row justify-content-center">
 				<img class="mb-4" src="{{ asset("/icon/person-fill.svg") }}" alt="Not found" width="72" height="72">
 			</div>
