--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 
-	<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+	<div class="d-flex justify-content-center">
 		<h1 class="display-4">White theme</h1>
 	</div>
 
