--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,9 @@
 			}
 		</style>
 
-		<link rel="stylesheet" href="{{ asset("/css/main.css") }}"> {% block style %}{% endblock %}
+		<link rel="stylesheet" href="{{ asset("/css/main.css") }}">
+		
+		{% block style %}{% endblock %}
 		</head>
 		<body>
 			<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
