--- a/public/css/security.css
+++ b/public/css/security.css
@@ -14,7 +14,6 @@ body {
     margin: auto;
     padding-top: 80px;
     padding-bottom: 40px;
-    align-items: center;
     text-align: center;
 }
 
@@ -34,30 +33,12 @@ body {
     z-index: 2;
 }
 
-.form-signin input[type="text"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+.form-signin input {
+    margin-bottom: 5px;
 }
 
-.form-signin input[type="password"] {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    margin-top: -1px;
-}
-
-.form-signin input[id="inputPassword"] {
-    margin-bottom: 10px;
-}
-
-.form-signin input[id="registration_form_plainPassword_first"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.form-signin input[id="registration_form_plainPassword_second"] {
-    margin-bottom: 10px;
+.form-signin button {
+    margin-top: 5px;
 }
 
 #already_logged {
