--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block style %}
-	<link rel="stylesheet" href="{{ asset("/css/security.css") }}">
+	<link href="{{ asset("/css/security.css") }}" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
