--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,23 @@
-html {
-    font-size: 14px;
+html,
+body {
+    width: 100%;
 }
 
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+@media(min-width: 768px) {
+    .bd-placeholder-img-lg {
+        font-size: 3.5rem;
     }
+}
+
+#footer {
+    max-width: 960px;
 }
