--- a/templates/main/page.html.twig
+++ b/templates/main/page.html.twig
@@ -4,18 +4,54 @@
 {% endblock %}
 
 {% block body %}
-  <div class="cont\ainer mt-4 mx-auto">
-    {% if page != null %}
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">{{ page.title }}</h5>
-          <p class="card-text">{{ page.introduction }}</p>
-        </div>
-      </div>
-    {% else %}
-      <div class="d-flex justify-content-center">
-        <h1>White theme</h1>
-      </div>
-    {% endif %}
-  </div>
-{% endblock %}
+	{% if page != null %}
+		<div class="container mt-5 mx-auto">
+			<div class="row m-3">
+				<div class="col">
+					<div class="card">
+						<div class="card-body">
+							<h5 class="card-title">{{ page.title }}</h5>
+							<p class="card-text">{{ page.introduction }}</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row m-3">
+				<div class="col-lg-6 col-md-6 col-12">
+					{% for comment in comments %}
+						<div class="row">
+							<div class="col mr-auto my-1">
+								<div class="card border-primary shadow">
+									<div class="card-body text-primary">
+										<h5 class="card-title">{{ comment.user.username }}</h5>
+										<p class="card-text">{{ comment.content }}</p>
+										<p class="card-text text-right">
+											<small class="text-muted">Data</small>
+										</p>
+									</div>
+								</div>
+							</div>
+							{% if is_granted('ROLE_ADMIN') %}
+								<div class="col-auto my-1">
+									<button type="button" class="btn btn-primary btn-sm">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash mt-n1" viewbox="0 0 16 16">
+											<path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
+											<path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"></path>
+										</svg>
+									</button>
+								</div>
+							{% endif %}
+						</div>
+					{% endfor %}
+				</div>
+				<div class="col-lg-6 col-md-6 col-12 my-1 text-right">
+					<button type="button" class="btn btn-primary btn-sm">Add</button>
+				</div>
+			</div>
+		</div>
+	{% else %}
+		<div class="d-flex justify-content-center">
+			<h1>Page not found</h1>
+		</div>
+	{% endif %}
+</div>{% endblock %}
