--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,20 +29,20 @@
 		<link rel="stylesheet" href="{{ asset('css/main.css') }}"> {% block style %}{% endblock %}
 		</head>
 		<body>
-			<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm sticky-top">
+			<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm sticky-top">
 				<h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
 
 				<nav class="my-2 my-md-0 mr-md-3">
 					{% if app.request.pathinfo != '/' %}
-						<a class="p-2 text-dark" href="{{ path('') }}">Home</a>
+						<a class="p-2 text-dark" href="{{ path('wiki_home') }}">Home</a>
 					{% endif %}
 
 					{% if is_granted('ROLE_USER') and (app.request.pathinfo != '/user') %}
-						<a class="p-2 text-dark" href="{{ path('user') }}">User</a>
+						<a class="p-2 text-dark" href="{{ path('wiki_user') }}">User</a>
 					{% endif %}
 
 					{% if is_granted('ROLE_ADMIN') and (app.request.pathinfo != '/admin') %}
-						<a class="p-2 text-dark" href="{{ path('admin') }}">Admin</a>
+						<a class="p-2 text-dark" href="{{ path('wiki_admin') }}">Admin</a>
 					{% endif %}
 
 					{% if (app.user == false) and (app.request.pathinfo != '/login') %}
@@ -60,12 +60,11 @@
 
 			{% block body %}{% endblock %}
 
-			<div id="footer" class="container">
-				<footer class="pt-4 my-md-4 pt-md-5 border-top">
+			<div class="container-sm">
+				<footer class="pt-4 mt-4 border-top">
 					<div class="row">
 						<div class="col-6 col-md">
 							<img class="mb-2" src="{{ asset('icon/dice-4-fill.svg') }}" alt="Not found" width="24" height="24">
-
 							<small class="d-block mb-3 text-muted">&copy; 2021</small>
 						</div>
 						<div class="col-6 col-md">
