--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -4,7 +4,72 @@
 {% endblock %}
 
 {% block body %}
-	<div class="d-flex justify-content-center">
-		<h1 class="display-4">White theme</h1>
+	<div class="container-fluid">
+		<div class="row m-2">
+			<div class="col-lg-9 col-md-8 col-12">
+				<div class="row my-1">
+					<div class="col-auto">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Special title treatment</h5>
+								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row my-1">
+					<div class="col">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Special title treatment</h5>
+								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Special title treatment</h5>
+								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row my-1">
+					<div class="col-auto">
+						<div class="card">
+							<div class="card-header">
+								Quote
+							</div>
+							<div class="card-body">
+								<blockquote class="blockquote mb-0">
+									<p>A well-known quote, contained in a blockquote element.</p>
+									<footer class="blockquote-footer">Someone famous in
+										<cite title="Source Title">Source Title</cite>
+									</footer>
+								</blockquote>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-6">
+				<div class="row my-1">
+					<div class="col">
+						<div class="card text-white bg-dark">
+							<div class="card-body">
+								<h5 class="card-title">Pagine</h5>
+								{% for page in pages %}
+									<a class="text-white" href='{{ path('wiki_page', {'title': page.title}) }}'>{{ page.title }}</a>
+								{% endfor %}
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 {% endblock %}
