--- a/templates/main/page.html.twig
+++ b/templates/main/page.html.twig
@@ -44,8 +44,25 @@
 						</div>
 					{% endfor %}
 				</div>
-				<div class="col-lg-6 col-md-6 col-12 my-1 text-right">
-					<button type="button" class="btn btn-primary btn-sm">Add</button>
+				<div class="col-lg-6 col-md-6 col-12 my-1">
+					<div class="row justify-content-between">
+						<div class="col">
+							<div class="form-group">
+								{{ form_start(comment_form) }}
+								{{ form_widget(comment_form.content) }}
+
+								<small>{{ form_help(comment_form) }}</small>
+
+								<div class="form-error">
+									{{ form_errors(comment_form) }}
+								</div>
+								{{ form_end(comment_form) }}
+							</div>
+						</div>
+						<div class="col-auto">
+							<button type="button" class="btn btn-primary btn-sm">Add</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -54,4 +71,4 @@
 			<h1>Page not found</h1>
 		</div>
 	{% endif %}
-</div>{% endblock %}
+{% endblock %}
