--- a/templates/main/page.html.twig
+++ b/templates/main/page.html.twig
@@ -16,11 +16,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="row m-3">
+			<div class="row m-3 px-lg-5 px-md-0 px-sm-5 py-3 justify-content-center">
 				<div class="col-lg-6 col-md-6 col-12">
 					{% for comment in comments %}
-						<div class="row justify-content-between">
-							<div class="col mr-auto my-1">
+						<div class="row">
+							<div class="col-10 my-1 mr-n2">
 								<div class="card border-primary w-auto">
 									<div class="card-body text-primary">
 										<h5 class="card-title">{{ comment.user.username }}</h5>
@@ -31,12 +31,11 @@
 									</div>
 								</div>
 							</div>
-							{% if is_granted('ROLE_ADMIN') %}
-								<div class="col-auto my-1">
+							{% if is_granted('ROLE_ADMIN') or (comment.user == app.user) %}
+								<div class="col-2 my-1 ml-n2">
 									<button type="button" class="btn btn-primary btn-sm">
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash mt-n1" viewbox="0 0 16 16">
-											<path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
-											<path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"></path>
+										<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x mt-n2 mx-n2 mb-n1" viewbox="0 0 16 16">
+											<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
 										</svg>
 									</button>
 								</div>
@@ -44,26 +43,30 @@
 						</div>
 					{% endfor %}
 				</div>
-				<div class="col-lg-6 col-md-6 col-12 my-1">
-					<div class="row justify-content-between">
-						<div class="col">
-							<div class="form-group">
-								{{ form_start(comment_form) }}
-								{{ form_widget(comment_form.content) }}
+				{% if is_granted('ROLE_USER') %}
+					<div class="col-lg-6 col-md-6 col-12 my-1">
+						<div class="row">
+							<div class="col">
+								<div class="form-group">
+									{{ form_start(comment_form) }}
+									{{ form_widget(comment_form.content) }}
 
-								<small>{{ form_help(comment_form) }}</small>
+									<small>{{ form_help(comment_form) }}</small>
 
-								<div class="form-error">
-									{{ form_errors(comment_form) }}
+									<div class="form-error">
+										{{ form_errors(comment_form) }}
+									</div>
+									<button type="submit" class="btn btn-primary btn-sm mt-2">
+										<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-check mx-n2 mt-n2 mb-n1" viewbox="0 0 16 16">
+											<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+										</svg>
+									</button>
+									{{ form_end(comment_form) }}
 								</div>
-								{{ form_end(comment_form) }}
 							</div>
 						</div>
-						<div class="col-auto">
-							<button type="button" class="btn btn-primary btn-sm">Add</button>
-						</div>
 					</div>
-				</div>
+				{% endif %}
 			</div>
 		</div>
 	{% else %}
