--- a/templates/main/not_found.html.twig
+++ b/templates/main/not_found.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<div class="d-flex justify-content-center">
-		<h1 class="display-4">Not found</h1>
+	<div class="d-flex justify-content-center my-5">
+		<h1>Page not found</h1>
 	</div>
 {% endblock %}
