--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -2,13 +2,13 @@
 	<div class="col">
 		<div class="card border shadow-sm">
 			<div class="card-body">
-				<h5 class="card-title">{{ page.title }}</h5>
+				<h2 class="card-title text-center">{{ page.title }}</h2>
 				<p class="card-text">{{ page.introduction }}</p>
 				{% for block in blocks %}
 					{% if block.type == 'title' %}
-						<h7>
+						<h4>
 							{{ block.content }}
-						</h7>
+						</h4>
 					{% endif %}
 					{% if block.type == 'text' %}
 						<p>
@@ -48,10 +48,36 @@
 					</a>
 				</p>
 				<div class="collapse" id="title">
-					Form titolo
+					<div class="form-group">
+						{{ form_start(title_form) }}
+						{{ form_widget(title_form.content) }}
+						<small>{{ form_help(title_form) }}</small>
+						<div class="form-error">
+							{{ form_errors(title_form) }}
+						</div>
+						<button type="submit" class="btn btn-primary btn-sm mt-2">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mx-n1" viewbox="0 0 16 16">
+								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+							</svg>
+						</button>
+						{{ form_end(title_form) }}
+					</div>
 				</div>
 				<div class="collapse" id="text">
-					Form testo
+					<div class="form-group">
+						{{ form_start(text_form) }}
+						{{ form_widget(text_form.content) }}
+						<small>{{ form_help(text_form) }}</small>
+						<div class="form-error">
+							{{ form_errors(text_form) }}
+						</div>
+						<button type="submit" class="btn btn-primary btn-sm mt-2">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mx-n1" viewbox="0 0 16 16">
+								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+							</svg>
+						</button>
+						{{ form_end(text_form) }}
+					</div>
 				</div>
 				<div class="collapse" id="image">
 					Form immagine
