aggiunta del bottone di delete block

--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -33,7 +33,7 @@
 							{% endif %}
 							{% if is_granted('ROLE_ADMIN') %}
 								<div class="col-auto text-right">
-									<a class="btn btn-primary btn-sm" href="{{ path('wiki_delete_block', {'id_block': block.id}) }}" role="button">
+									<a class="btn btn-primary btn-sm" href="{{ path('wiki_block_delete', {'id_block': block.id}) }}" role="button">
 										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
 											<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
 										</svg>
