--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,11 +45,11 @@
 					<a class="btn btn-outline-primary" href="{{ path('app_login') }}">Sign in</a>
 				{% endif %}
 				{% if (app.user == false) and app.request.pathinfo != '/register' %}
-					<a class="btn btn-outline-dark" href="{{ path('app_register') }}">Sign up</a>
+					<a class="btn btn-primary" href="{{ path('app_register') }}">Sign up</a>
 				{% endif %}
 
 				{% if app.user %}
-					<a class="btn btn-outline-dark" href="{{ path('app_logout') }}">Logout</a>
+					<a class="btn btn-outline-primary" href="{{ path('app_logout') }}">Logout</a>
 				{% endif %}
 			</nav>
 		</div>
