--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -39,11 +39,11 @@
 			<div class="col-lg-3 col-md-4 col-6">
 				<div class="row m-3">
 					<div class="col">
-						<div class="card text-white bg-dark shadow-lg">
+						<div class="card bg-light shadow-lg">
 							<div class="card-body">
 								<h5 class="card-title">Pagine</h5>
 								{% for page in pages %}
-									<a class="text-white" href='{{ path('wiki_page', {'title': page.title}) }}'>{{ page.title }}</a>
+									<a class="text-dark" href='{{ path('wiki_page', {'title': page.title}) }}'>{{ page.title }}</a>
 								{% endfor %}
 							</div>
 						</div>
