--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,9 +31,12 @@
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 		<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
+		<script type="text/javascript" src="{{ asset('js/default.js') }}"></script>
+
+
 	</head>
-	<body>
-		<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm sticky-top">
+	<body onload="load()">
+		<div id="id_navbar" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm sticky-top">
 			<h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
 
 			<nav class="my-2 my-md-0 mr-md-3">
