--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -6,18 +6,18 @@
 			<div class="col-lg-9 col-md-8 col-12">
 				<div class="row m-3">
 					<div class="col-auto">
-						<div class="jumbotron bg-white text-black border shadow">
-							<h1 class="display-4 text-center">Hello, world!</h1>
-							<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+						<div class="jumbotron bg-white text-black border shadow-sm">
+							<h1 class="display-4 text-center">La crittografia</h1>
+							<p class="lead">La crittografia è un insieme di procedure ideate al fine di nascondere il significato di un messaggio.</p>
+							<p class="lead">Essa ha 2 parti essenziali: un algoritmo di cifratura ed una chiave.</p>
 							<hr class="my-4 text-white">
-							<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-							<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+							something
 						</div>
 					</div>
 				</div>
-				<div class="row m-3 mx-5">
+				<div class="row m-3">
 					<div class="col-7">
-						<div class="card shadow">
+						<div class="card shadow-sm">
 							<div class="card-body">
 								<h5 class="card-title">Special title treatment</h5>
 								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -26,11 +26,13 @@
 						</div>
 					</div>
 					<div class="col-5">
-						<div class="card shadow">
+						<div class="card shadow-sm">
 							<div class="card-body">
-								<h5 class="card-title">Special title treatment</h5>
-								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
+								<blockquote class="blockquote mb-0">
+									<p>"Un sistema crittografico dovrebbe essere protetto anche se tutto ciò che riguarda il sistema, tranne la chiave, è di dominio pubblico".</p>
+									<footer class="blockquote-footer">Auguste Kerckhoffs
+									</footer>
+								</blockquote>
 							</div>
 						</div>
 					</div>
@@ -39,11 +41,13 @@
 			<div class="col-lg-3 col-md-4 col-6">
 				<div class="row m-3">
 					<div class="col">
-						<div class="card bg-light shadow-lg">
+						<div class="card bg-light">
 							<div class="card-body">
 								<h5 class="card-title">Pagine</h5>
 								{% for page in pages %}
-									<a class="text-dark" href='{{ path('wiki_page', {'title': page.title}) }}'>{{ page.title }}</a>
+									<p class="m-0">
+										<a class="text-dark" href="{{ path('wiki_page', {'title': page.title}) }}">{{ page.title }}</a>
+									</p>
 								{% endfor %}
 							</div>
 						</div>
