implementazione della modifica dei blocchi

--- a/templates/main/page/comments.html.twig
+++ b/templates/main/page/comments.html.twig
@@ -1,7 +1,7 @@
 <div class="container mt-4">
 	<div class="card shadow">
 		<div class="card-body">
-			<h4 class="border-bottom pb-2 mb-0">Comments</h4>
+			<h4 class="border-bottom pb-2 mb-0">Commenti</h4>
 			{% for comment in comments %}
 				<div class="media border-bottom pt-3 pb-1">
 					<p class="media-body pb-1 mb-0 small">
