--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -3,24 +3,26 @@
 		<div class="card-body">
 			<h1 class="card-title text-center display-4">{{ page.title }}</h1>
 			<div class="container m-0 p-0">
-				<div class="row justify-content-between">
+				<div class="row justify-content-between mb-1">
 					<div class="col-md-9">
 						<p class="mt-1">
 							{{ page.introduction }}
 						</p>
 					</div>
-					<div class="col-md-3">
-						<div class="card bg-light">
-							<div class="card-body">
-								<h5 class="card-title">Indice</h5>
-								{% for title_block in title_blocks %}
-									<p class="m-0">
-										<a class="text-dark" href="#{{ title_block.content }}" offset="1000">{{ title_block.content }}</a>
-									</p>
-								{% endfor %}
+					{% if not title_blocks is empty %}
+						<div class="col-md-3">
+							<div class="card bg-light">
+								<div class="card-body">
+									<h5 class="card-title">Indice</h5>
+									{% for title_block in title_blocks %}
+										<p class="m-0">
+											<a class="text-dark" href="#{{ title_block.content }}" offset="1000">{{ title_block.content }}</a>
+										</p>
+									{% endfor %}
+								</div>
 							</div>
 						</div>
-					</div>
+					{% endif %}
 				</div>
 				{% for block in blocks %}
 					<div class="row">
@@ -50,19 +52,22 @@
 						{% endif %}
 						{% if is_granted('ROLE_ADMIN') %}
 							<div class="col-auto text-right">
-								{% if block.position > 1 %}
-									<a class="btn btn-primary btn-sm" href="{{ path('wiki_block_move_up', {'id_block': block.id}) }}" role="button">
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-fill mt-n1" viewbox="0 0 16 16">
-											<path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"></path>
-										</svg>
-									</a>
-								{% endif %}
-								{% if block.position < blocks|last.position %}
-									<a class="btn btn-primary btn-sm" href="{{ path('wiki_block_move_down', {'id_block': block.id}) }}" role="button">
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill mt-n1" viewbox="0 0 16 16">
-											<path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"></path>
-										</svg>
-									</a>
+								<span class="badge badge-pill badge-primary pr-2">{{ block.position }}</span>
+								{% if block.type == 'image' %}
+									{% if block.position > 1 %}
+										<a class="btn btn-primary btn-sm" href="{{ path('wiki_block_move_up', {'id_block': block.id}) }}" role="button">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-fill mt-n1" viewbox="0 0 16 16">
+												<path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"></path>
+											</svg>
+										</a>
+									{% endif %}
+									{% if block.position < blocks|last.position %}
+										<a class="btn btn-primary btn-sm" href="{{ path('wiki_block_move_down', {'id_block': block.id}) }}" role="button">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill mt-n1" viewbox="0 0 16 16">
+												<path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"></path>
+											</svg>
+										</a>
+									{% endif %}
 								{% endif %}
 								{% if block.type != 'image' %}
 									<a class="btn btn-primary btn-sm" href="{{ path('wiki_block_edit', {'id_block': block.id}) }}" role="button">
@@ -111,75 +116,97 @@
 					</a>
 				</p>
 				<div class="collapse" id="title">
-					<div class="form-group mb-0 mt-2">
-						{{ form_start(title_form) }}
-						{{ form_widget(title_form.content) }}
+					{{ form_start(title_form) }}
+					<div class="form-row">
+						<div class="form-group mb-0 mt-2 col">
+							{{ form_widget(title_form.content) }}
+						</div>
+						<div class="form-group mb-0 mt-2 col-auto">
+							{{ form_widget(title_form.position)}}
+						</div>
 						<small>{{ form_help(title_form) }}</small>
 						<div class="form-error">
 							{{ form_errors(title_form) }}
 						</div>
-						<button type="submit" class="btn btn-primary btn-sm mt-1">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
-								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
-							</svg>
-						</button>
-						{{ form_end(title_form) }}
 					</div>
+					<button type="submit" class="btn btn-primary btn-sm mt-1">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+							<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+						</svg>
+					</button>
+					{{ form_rest(title_form) }}
+					{{ form_end(title_form) }}
 				</div>
 				<div class="collapse" id="text">
-					<div class="form-group mb-0 mt-2">
-						{{ form_start(text_form) }}
-						{{ form_widget(text_form.content)}}
+					{{ form_start(text_form) }}
+					<div class="form-row">
+						<div class="form-group mb-0 mt-2 col">
+							{{ form_widget(text_form.content) }}
+						</div>
+						<div class="form-group mb-0 mt-2 col-auto">
+							{{ form_widget(text_form.position)}}
+						</div>
 						<small>{{ form_help(text_form) }}</small>
 						<div class="form-error">
 							{{ form_errors(text_form) }}
 						</div>
-						<button type="submit" class="btn btn-primary btn-sm mt-1">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
-								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
-							</svg>
-						</button>
-						{{ form_end(text_form) }}
 					</div>
+					<button type="submit" class="btn btn-primary btn-sm mt-1">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+							<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+						</svg>
+					</button>
+					{{ form_rest(text_form) }}
+					{{ form_end(text_form) }}
 				</div>
 				<div class="collapse" id="image">
-					<div class="form-group mb-0 mt-2">
-						{{ form_start(image_form) }}
-						{{ form_widget(image_form.image, { 'attr': {'class': 'form-control-file'} })}}
+					{{ form_start(image_form) }}
+					<div class="form-row">
+						<div class="form-group mb-0 mt-2 col">
+							{{ form_widget(image_form.image, { 'attr': {'class': 'form-control-file'} }) }}
+						</div>
+						<div class="form-group mb-0 mt-2 col-auto">
+							{{ form_widget(image_form.position)}}
+						</div>
 						<small>{{ form_help(image_form) }}</small>
 						<div class="form-error">
 							{{ form_errors(image_form) }}
 						</div>
-						{{ form_rest(image_form) }}
-						<button type="submit" class="btn btn-primary btn-sm mt-1">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
-								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
-							</svg>
-						</button>
-						{{ form_end(text_form) }}
 					</div>
+					<button type="submit" class="btn btn-primary btn-sm mt-1">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+							<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+						</svg>
+					</button>
+					{{ form_rest(image_form) }}
+					{{ form_end(image_form) }}
 				</div>
 				<div class="collapse" id="code">
-					<div class="form-group mb-0 mt-2">
-						{{ form_start(code_form) }}
-						{{ form_widget(code_form.content)}}
+					{{ form_start(code_form) }}
+					<div class="form-row">
+						<div class="form-group mb-0 mt-2 col">
+							{{ form_widget(code_form.content) }}
+						</div>
+						<div class="form-group mb-0 mt-2 col-auto">
+							{{ form_widget(code_form.position)}}
+						</div>
 						<small>{{ form_help(code_form) }}</small>
 						<div class="form-error">
 							{{ form_errors(code_form) }}
 						</div>
-						<button type="submit" class="btn btn-primary btn-sm mt-1">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
-								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
-							</svg>
-						</button>
-						{{ form_end(code_form) }}
 					</div>
+					<button type="submit" class="btn btn-primary btn-sm mt-1">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+							<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+						</svg>
+					</button>
+					{{ form_rest(code_form) }}
+					{{ form_end(code_form) }}
 				</div>
 				<div class="collapse" id="info">
 					<div class="card mt-1">
 						<div class="card-body">
 							<a class="p-2 text-dark" href="https://en.wikibooks.org/wiki/LaTeX/Mathematics">Guida per inserire i simboli matematici nella wiki.</a>
-
 						</div>
 					</div>
 				</div>
