--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -46,14 +46,33 @@
 								<h5 class="card-title">Pagine</h5>
 								{% for page in pages %}
 									<p class="m-0">
-										<a class="text-dark" href="{{ path('wiki_page', {'title': page.title}) }}">{{ page.title }}</a>
+										<a class="text-dark" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
 									</p>
 								{% endfor %}
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+				{% if is_granted('ROLE_USER') %}
+					{{ form_start(page_form) }}
+					<div class="form-row">
+						<div class="form-group mb-0 mt-2 col">
+							{{ form_widget(page_form.title) }}
+						</div>
+						<small>{{ form_help(page_form) }}</small>
+						<div class="form-error">
+							{{ form_errors(page_form) }}
+						</div>
+					</div>
+					<button type="submit" class="btn btn-primary btn-sm mt-1">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+							<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+						</svg>
+					</button>
+					{{ form_rest(page_form) }}
+					{{ form_end(page_form) }}
+				</div>
+			{% endif %}
 		</div>
 	</div>
 {% endblock %}
