allineamento bottoni edit

--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -40,7 +40,7 @@
 					{% endif %}
 				</div>
 				{% for block in blocks %}
-					<div class="row  mt-1">
+					<div class="row align-items-center mt-1">
 						{% if block.type == 'title' %}
 							<div class="col border-top mt-3 pt-3" id="{{ block.content }}">
 								<h4 class="">
